@@ -21,16 +21,36 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.springframework.kafka:spring-kafka'
+    //implementation 'org.flywaydb:flyway-core'
+    //implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'commons-io:commons-io:2.8.0'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    //testImplementation 'org.springframework.kafka:spring-kafka-test'
+    //testImplementation 'org.mockito:mockito-core:3.7.0'
+    //testImplementation 'org.mockito:mockito-junit-jupiter:3.7.0'
 }
 
 test {
     useJUnitPlatform()
+}
+
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
